Mise en place du readme.md + mise en place du template

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,62 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+{% set route = app.request.attributes.get('_route') %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {# BOOTSTRAP #}
+    <link rel="stylesheet" href="{{ asset('css/bootstrap/bootstrap.min.css') }}">
+    {# FONT AWESOME #}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer">
+    {# MON STYLESHEET #}
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <title>{% block title %}{% endblock %}</title>
+</head>
+<body>
+<header>
+    {# BOOTSRAP NAV #}
+        <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="{{ path('home') }}">Wake</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                        {# BOUTON #}
+                        <li class="nav-item">
+                            <a class="nav-link {{ route == 'home' ? 'active' }}" aria-current="page"
+                               href="{{ path('home') }}">Accueil</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+
+
+</header>
+<div class="container">
+
+    {% block body %}
+
+    {% endblock %}
+
+
+</div>
+{# BOOTSTRAP JS #}
+<script src="{{ asset('js/bootstrap/bootstrap.bundle.min.js') }}"></script>
+</body>
 </html>
