--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -2,6 +2,19 @@
 
 {% block body %}
 
+    <div class="container-fluid">
+        <div class="row">
+            <h1 class="col-12 text-center mt-3 mb-0">Le wake for ever</h1>
+        </div>
+
+        <div class="row">
+            <h2 class="text-center fs-6 mt-0 mb-3">Pour tous les passionnés de WakeBoard</h2>
+            <p class="col-12 col-md-8 mx-auto text-center">CablePark ou Bateau tant qu'on est tiré par un cable qu'on flotte sur l'eau et qu'on s'envoie l'air on dis oui !</p>
+        </div>
+        <div class="cover row my-3"></div>
+    </div>
+
+
 {% endblock %}
 
 
