--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: #1A1D45;
+    color: #F5F7F9;
+}
+
+.cover{
+    background-image: url("../image/cover.jpg");
+    height: 300px;
+    background-attachment: fixed;
+    background-size: cover;
 }
