Authentification + message alert

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,9 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: #1A1D45;
+    background-image: url("../image/fond.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #F5F7F9;
 }
 
