--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
                             <div class="dropdown-menu" aria-labelledby="profil-dropdown">
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path('home') }}"><i
-                                            class="fas fa-sign-out-alt mr-1"></i>profil</a>
+                                            class="fas fa-id-card mr-1"></i>Profil</a>
                                 <a class="dropdown-item" href="{{ path('app_logout') }}"><i
                                             class="fas fa-sign-out-alt mr-1"></i>Déconnexion</a>
                             </div>
