--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,25 +5,22 @@
 {% block body %}
     <div class="container-fluid">
         <div class="row col-12 col-md-4 mx-auto">
+            <h1 class="h3 my-3 font-weight-normal text-center ">Connexion</h1>
 
             <form method="post">
                 {% if error %}
                     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
-
-                {% if app.user %}
-                    <div class="mb-3">
-                        You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-                    </div>
-                {% endif %}
-
-                <h1 class="h3 my-3 font-weight-normal text-center ">Connexion</h1>
-                <label for="inputEmail">Email</label>
-                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
-                       autocomplete="email" required autofocus>
-                <label for="inputPassword">Password</label>
-                <input type="password" name="password" id="inputPassword" class="form-control"
-                       autocomplete="current-password" required>
+                <div class="mb-3">
+                    <label for="inputEmail" class="form-label">Email</label>
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
+                           required autofocus>
+                </div>
+                <div class="mb-3">
+                    <label for="inputPassword" class="form-label">Mot de passe</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control"
+                           autocomplete="current-password" required>
+                </div>
 
                 <input type="hidden" name="_csrf_token"
                        value="{{ csrf_token('authenticate') }}"
@@ -39,8 +36,10 @@
                     </label>
                 </div>
                 #}
+                <div class="mb-3">
+                    <button class="btn btn-secondary w-100 my-3" type="submit">Connexion</button>
+                </div>
 
-                <button class="btn btn-secondary w-100 my-3" type="submit">Connexion</button>
             </form>
         </div>
     </div>
