--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,6 +38,7 @@
                 #}
                 <div class="mb-3">
                     <button class="btn btn-secondary w-100 my-3" type="submit">Connexion</button>
+                    <a class="btn btn-outline-secondary w-100 my-3" href="{{ path('app_register') }}">Inscription</a>
                 </div>
 
             </form>
