implémentation de recaptcha et ckeditor

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,8 +19,8 @@
     {# CSS ADITIONEL #}
     {% block css %}{% endblock %}
 
-    {# TODO: le titre pour etre dynamisé #}
-    <title>{% block title %}{% endblock %} - Le Wake For Ever</title>
+
+    <title>{% block title %}{% endblock %} - {{ site_name }}</title>
 </head>
 
 <body class="bg-light">
