--- a/templates/blog/viewOneArticle.html.twig
+++ b/templates/blog/viewOneArticle.html.twig
@@ -9,7 +9,7 @@
             <p class="col-12 text-center"><a href="{{ path('blog_view_articles') }}" class="text-decoration-none">Retour a la liste</a></p>
 
                 <h1 class="text-center">{{ article.title }}</h1>
-                <p>{{ article.content|nl2br }}</p>
+                <p>{{ article.content|raw|purify }}</p>
 
                 <p class="blockquote-footer">Ecrit par : <span class="text-info">{{ article.user.pseudo }}</span>
                     le <span class="text-info">{{ article.publicationDate|date('d/m/Y') }}</span></p>
