--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,14 +8,20 @@
     <div class="row col-12 col-md-4 mx-auto">
 
     {{ form_start(registrationForm) }}
+        {{ form_errors(registrationForm) }}
+
         {{ form_row(registrationForm.pseudo) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Mot de passe'
         }) }}
-
+        <div class="g-recaptcha" data-sitekey="{{ google_recaptcha }}"></div>
         <button type="submit" class="btn btn-secondary w-100">S'inscrire</button>
     {{ form_end(registrationForm) }}
     </div>
 </div>
+{% endblock %}
+
+{% block css %}
+    <script src="http://www.google.com/recaptcha/api.js" async defer></script>
 {% endblock %}
