--- a/templates/blog/search_article.html.twig
+++ b/templates/blog/search_article.html.twig
@@ -38,7 +38,7 @@
                     </div>
                 {% else %}
                     <div class="card col-12 col-md-10 mx-auto mt-3">
-                        <p>Aucun article les rédacteurs sont fénéant</p>
+                        <p>Aucun article trouvé</p>
                     </div>
                 {% endfor %}
                 {% if listeArticle is not null %}
