--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -9,7 +9,13 @@
             <div class="shadow col-lg-8 offset-lg-2 bg-light p-3 d-inline-block mt-5">
 
                 <div class="card mx-auto col-12 col-md-10 col-lg-5 mt-5">
+                    {% if app.user.photo is null %}
                     <img src="{{ asset('image/defaut.jpg') }}" class="card-img-top" alt="...">
+
+                    {% else %}
+                    <img src="{{ asset('image/profils/'~ app.user.photo) }}" class="card-img-top img-fluid img-thumbnail" alt="...">
+
+                    {% endif %}
                     <h5 class="card-title text-center mt-2">{{ app.user.pseudo }}</h5>
                     <div class="card-body">
                         <p class="card-text">Mail :
@@ -25,7 +31,7 @@
                         {% else %}
                             <p>Role : <span class="text-info">Utilisateur</span></p>
                         {% endif %}
-                        <a href="#" class="btn btn-outline-primary w-100">Modifier Avatar</a>
+                        <a href="{{ path('edit_photo_profil') }}" class="btn btn-outline-primary w-100">Modifier Avatar</a>
                     </div>
                 </div>
             </div>
